@@ -14,6 +14,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.dao.DataIntegrityViolationException;
 
@@ -25,14 +26,15 @@ import br.com.sfpacim.backend.models.Pessoa;
 import br.com.sfpacim.backend.models.Usuario;
 import br.com.sfpacim.backend.models.enums.InstituicaoFinanceira;
 import br.com.sfpacim.backend.repositories.ContaRepository;
-import br.com.sfpacim.backend.repositories.PessoaRepository;
+import br.com.sfpacim.backend.utils.MetodosUteis;
 
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -41,8 +43,9 @@ import static org.mockito.Mockito.when;
  * Testes unitários para a classe {@link ContaService}.
  *
  * <p>
- * Utiliza Mockito para isolar o serviço das dependências externas
- * (Repositories e ContextoUsuarioService).
+ * Utiliza Mockito para isolar o serviço das dependências externas, validando
+ * regras de negócio, recálculos de saldo e o isolamento de dados. Faz uso do
+ * MockedStatic para cobertura de ramificações defensivas nos blocos catch.
  *
  * @author Matheus F. N. Pereira
  */
@@ -53,7 +56,10 @@ class ContaServiceTest {
     private ContaRepository contaRepository;
 
     @Mock
-    private PessoaRepository pessoaRepository;
+    private PessoaService pessoaService;
+
+    @Mock
+    private TransacaoService transacaoService;
 
     @Mock
     private ContextoUsuarioService contextoUsuarioService;
@@ -68,12 +74,11 @@ class ContaServiceTest {
 
     private Usuario usuario;
     private Pessoa pessoaTitular;
-    private Pessoa pessoaDependente;
     private Conta conta;
     private CriarAtualizarContaDTO criarAtualizarContaDTO;
 
     /**
-     * Configura o cenário comum antes de cada teste.
+     * Configura o cenário comum antes de cada teste com IDs simulados.
      */
     @BeforeEach
     void setUp() {
@@ -84,10 +89,6 @@ class ContaServiceTest {
         pessoaTitular.setId(UUID.randomUUID());
         pessoaTitular.setTitular(true);
 
-        pessoaDependente = new Pessoa("Dependente", usuario);
-        pessoaDependente.setId(UUID.randomUUID());
-        pessoaDependente.setTitular(false);
-
         conta = new Conta(NOME_CONTA, INSTITUICAO, SALDO_INICIAL, pessoaTitular);
         conta.setId(UUID.randomUUID());
 
@@ -96,15 +97,18 @@ class ContaServiceTest {
     }
 
     /**
-     * Testa o método {@link ContaService#cadastrar(CriarAtualizarContaDTO)}.
-     * Valida o cenário de sucesso.
+     * Testa o cenário de sucesso no método
+     * {@link ContaService#cadastrar(CriarAtualizarContaDTO)}.
      */
     @Test
     @DisplayName("cadastrar: Quando dados válidos, deve vincular à pessoa e salvar")
     void testeCadastrar_QuandoDadosValidos_DeveSalvarConta() {
+        UUID usuarioId = usuario.getId();
+        UUID pessoaId = pessoaTitular.getId();
+
         when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
-        when(pessoaRepository.findById(pessoaTitular.getId())).thenReturn(Optional.of(pessoaTitular));
-        when(contaRepository.findByPessoa(pessoaTitular)).thenReturn(Collections.emptyList());
+        when(pessoaService.obterEntidadeValidada(usuarioId, pessoaId)).thenReturn(pessoaTitular);
+        when(contaRepository.findByPessoaUsuarioIdAndPessoaId(usuarioId, pessoaId)).thenReturn(Collections.emptyList());
         when(contaRepository.saveAndFlush(any(Conta.class))).thenReturn(conta);
 
         ContaDTO resultado = contaService.cadastrar(criarAtualizarContaDTO);
@@ -117,107 +121,148 @@ class ContaServiceTest {
     }
 
     /**
-     * Testa o cadastro tentando vincular a uma pessoa que NÃO é titular.
-     * Deve lançar ViolacaoDadosException.
+     * Testa a validação de unicidade de nome em memória no método
+     * {@link ContaService#cadastrar(CriarAtualizarContaDTO)}.
      */
     @Test
-    @DisplayName("cadastrar: Quando pessoa não é titular, deve lançar ViolacaoDadosException")
-    void testeCadastrar_QuandoPessoaNaoTitular_DeveLancarExcecao() {
-        CriarAtualizarContaDTO dtoDependente = new CriarAtualizarContaDTO(NOME_CONTA, INSTITUICAO, SALDO_INICIAL,
-                pessoaDependente.getId());
+    @DisplayName("cadastrar: Quando nome duplicado para a pessoa na memória, deve lançar exceção")
+    void testeCadastrar_QuandoNomeDuplicadoEmMemoria_DeveLancarExcecao() {
+        UUID usuarioId = usuario.getId();
+        UUID pessoaId = pessoaTitular.getId();
 
         when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
-        when(pessoaRepository.findById(pessoaDependente.getId())).thenReturn(Optional.of(pessoaDependente));
-
-        ViolacaoDadosException excecao = assertThrows(ViolacaoDadosException.class,
-                () -> contaService.cadastrar(dtoDependente));
-
-        assertTrue(excecao.getMessage().contains("não é um titular habilitado"),
-                "A mensagem deve informar sobre a titularidade");
-
-        verify(contaRepository, never()).saveAndFlush(any());
-    }
-
-    /**
-     * Testa o cadastro com nome duplicado para a MESMA pessoa.
-     * Deve lançar ViolacaoDadosException.
-     */
-    @Test
-    @DisplayName("cadastrar: Quando nome duplicado para a pessoa, deve lançar exceção")
-    void testeCadastrar_QuandoNomeDuplicado_DeveLancarExcecao() {
-        when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
-        when(pessoaRepository.findById(pessoaTitular.getId())).thenReturn(Optional.of(pessoaTitular));
-        when(contaRepository.findByPessoa(pessoaTitular)).thenReturn(List.of(conta));
+        when(pessoaService.obterEntidadeValidada(usuarioId, pessoaId)).thenReturn(pessoaTitular);
+        when(contaRepository.findByPessoaUsuarioIdAndPessoaId(usuarioId, pessoaId)).thenReturn(List.of(conta));
 
         ViolacaoDadosException excecao = assertThrows(ViolacaoDadosException.class,
                 () -> contaService.cadastrar(criarAtualizarContaDTO));
 
-        assertTrue(excecao.getMessage().contains("Já existe uma conta"),
-                "A mensagem deve indicar duplicidade de nome");
-
+        assertTrue(excecao.getMessage().contains(NOME_CONTA));
         verify(contaRepository, never()).saveAndFlush(any());
     }
 
     /**
-     * Testa o método {@link ContaService#listar()}.
-     * Deve retornar as contas de todas as pessoas do usuário.
+     * Testa o comportamento real do catch no método
+     * {@link ContaService#cadastrar(CriarAtualizarContaDTO)}.
      */
     @Test
-    @DisplayName("listar: Deve retornar todas as contas das pessoas do usuário")
-    void testeListar_DeveRetornarContas() {
+    @DisplayName("cadastrar: Quando banco lançar erro de integridade, deve lançar ViolacaoDadosException")
+    void testeCadastrar_ErroBanco_LancaExcecaoReal() {
+        UUID usuarioId = usuario.getId();
+        UUID pessoaId = pessoaTitular.getId();
+
         when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
-        when(pessoaRepository.findByUsuario(usuario)).thenReturn(List.of(pessoaTitular));
-        when(contaRepository.findByPessoa(pessoaTitular)).thenReturn(List.of(conta));
+        when(pessoaService.obterEntidadeValidada(usuarioId, pessoaId)).thenReturn(pessoaTitular);
+        when(contaRepository.findByPessoaUsuarioIdAndPessoaId(usuarioId, pessoaId)).thenReturn(Collections.emptyList());
+
+        when(contaRepository.saveAndFlush(any(Conta.class)))
+                .thenThrow(new DataIntegrityViolationException("Erro constraint"));
+
+        ViolacaoDadosException excecao = assertThrows(ViolacaoDadosException.class,
+                () -> contaService.cadastrar(criarAtualizarContaDTO));
+
+        assertTrue(excecao.getMessage().contains(NOME_CONTA));
+    }
+
+    /**
+     * Testa a ramificação do 'return null' dentro do catch durante o cadastro.
+     */
+    @Test
+    @DisplayName("cadastrar: Quando banco lançar erro, testa o catch cobrindo o return null (Mock Estático)")
+    void testeCadastrar_ErroBanco_CobrindoReturnNull() {
+        UUID usuarioId = usuario.getId();
+        UUID pessoaId = pessoaTitular.getId();
+
+        when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
+        when(pessoaService.obterEntidadeValidada(usuarioId, pessoaId)).thenReturn(pessoaTitular);
+        when(contaRepository.findByPessoaUsuarioIdAndPessoaId(usuarioId, pessoaId)).thenReturn(Collections.emptyList());
+
+        when(contaRepository.saveAndFlush(any(Conta.class)))
+                .thenThrow(new DataIntegrityViolationException("Erro constraint"));
+
+        try (MockedStatic<MetodosUteis> utilMock = mockStatic(MetodosUteis.class)) {
+            assertThrows(NullPointerException.class, () -> contaService.cadastrar(criarAtualizarContaDTO));
+            utilMock.verify(() -> MetodosUteis.validarUnicidade(true, Conta.class.getSimpleName(), NOME_CONTA,
+                    pessoaTitular.getNome()));
+        }
+    }
+
+    /**
+     * Testa a ordenação composta do método {@link ContaService#listar()}.
+     */
+    @Test
+    @DisplayName("listar: Deve ordenar por Nome do Titular e depois por Nome da Conta")
+    void testeListar_DeveRetornarOrdenadoPorTitularEConta() {
+        Pessoa bruno = new Pessoa("Bruno", usuario);
+        Pessoa ana = new Pessoa("Ana", usuario);
+
+        Conta contaBruno = new Conta("Conta Itaú", InstituicaoFinanceira.ITAU, BigDecimal.ZERO, bruno);
+        Conta contaAnaNubank = new Conta("Conta Nubank", InstituicaoFinanceira.NUBANK, BigDecimal.ZERO, ana);
+        Conta contaAnaInter = new Conta("Conta Inter", InstituicaoFinanceira.INTER, BigDecimal.ZERO, ana);
+
+        when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
+        when(contaRepository.findByPessoaUsuarioId(usuario.getId()))
+                .thenReturn(List.of(contaBruno, contaAnaNubank, contaAnaInter));
 
         List<ContaDTO> resultado = contaService.listar();
 
-        assertFalse(resultado.isEmpty());
-        assertEquals(1, resultado.size());
-        assertEquals(NOME_CONTA, resultado.get(0).nome());
+        assertEquals(3, resultado.size());
+        assertEquals("Ana", resultado.get(0).pessoa().nome());
+        assertEquals("Conta Inter", resultado.get(0).nome());
+        assertEquals("Ana", resultado.get(1).pessoa().nome());
+        assertEquals("Conta Nubank", resultado.get(1).nome());
+        assertEquals("Bruno", resultado.get(2).pessoa().nome());
+        assertEquals("Conta Itaú", resultado.get(2).nome());
     }
 
     /**
-     * Testa o método {@link ContaService#atualizar}.
-     * Valida atualização simples (sem mudança de saldo inicial).
+     * Testa a atualização com sucesso no método
+     * {@link ContaService#atualizar(UUID, CriarAtualizarContaDTO)}.
      */
     @Test
-    @DisplayName("atualizar: Quando válido, deve atualizar os dados")
+    @DisplayName("atualizar: Quando válido e sem mudança de pessoa, deve atualizar os dados")
     void testeAtualizar_QuandoValido_DeveAtualizar() {
-        CriarAtualizarContaDTO dtoNovo = new CriarAtualizarContaDTO(NOME_CONTA_NOVO, INSTITUICAO, SALDO_INICIAL,
-                pessoaTitular.getId());
+        UUID contaId = conta.getId();
+        UUID usuarioId = usuario.getId();
+        CriarAtualizarContaDTO dtoNovo = new CriarAtualizarContaDTO(NOME_CONTA_NOVO, InstituicaoFinanceira.INTER,
+                SALDO_INICIAL, pessoaTitular.getId());
 
         when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
-        when(contaRepository.findById(conta.getId())).thenReturn(Optional.of(conta));
-        when(contaRepository.findByPessoa(pessoaTitular)).thenReturn(List.of(conta));
+        when(contaRepository.findByPessoaUsuarioIdAndId(usuarioId, contaId)).thenReturn(Optional.of(conta));
+        when(contaRepository.findByPessoaUsuarioIdAndPessoaId(usuarioId, pessoaTitular.getId()))
+                .thenReturn(List.of(conta));
+
         when(contaRepository.saveAndFlush(any(Conta.class))).thenReturn(conta);
 
-        ContaDTO resultado = contaService.atualizar(conta.getId(), dtoNovo);
+        ContaDTO resultado = contaService.atualizar(contaId, dtoNovo);
 
         assertEquals(NOME_CONTA_NOVO, resultado.nome());
-        assertEquals(NOME_CONTA_NOVO, conta.getNome());
+        assertEquals(InstituicaoFinanceira.INTER, resultado.instituicao());
     }
 
     /**
-     * Testa a lógica de recálculo de saldo (Delta).
-     * Cenário: Saldo Inicial aumenta em 100.00 -> Saldo Atual deve aumentar em
-     * 100.00.
+     * Testa a lógica de recálculo (Delta) no método
+     * {@link ContaService#atualizar(UUID, CriarAtualizarContaDTO)}.
      */
     @Test
     @DisplayName("atualizar: Quando saldo inicial muda, deve recalcular saldo atual (Delta)")
     void testeAtualizar_QuandoSaldoInicialMuda_DeveRecalcularSaldoAtual() {
+        UUID contaId = conta.getId();
+        UUID usuarioId = usuario.getId();
 
-        conta.setSaldoAtual(new BigDecimal("800.00"));
+        conta.debitar(new BigDecimal("200.00"));
 
         BigDecimal novoSaldoInicial = new BigDecimal("1100.00");
         CriarAtualizarContaDTO dtoSaldoAlterado = new CriarAtualizarContaDTO(NOME_CONTA, INSTITUICAO, novoSaldoInicial,
                 pessoaTitular.getId());
 
         when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
-        when(contaRepository.findById(conta.getId())).thenReturn(Optional.of(conta));
-        when(contaRepository.findByPessoa(pessoaTitular)).thenReturn(List.of(conta));
+        when(contaRepository.findByPessoaUsuarioIdAndId(usuarioId, contaId)).thenReturn(Optional.of(conta));
+        when(contaRepository.findByPessoaUsuarioIdAndPessoaId(usuarioId, pessoaTitular.getId()))
+                .thenReturn(Collections.emptyList());
         when(contaRepository.saveAndFlush(any(Conta.class))).thenAnswer(i -> i.getArguments()[0]);
 
-        contaService.atualizar(conta.getId(), dtoSaldoAlterado);
+        contaService.atualizar(contaId, dtoSaldoAlterado);
 
         assertEquals(new BigDecimal("900.00"), conta.getSaldoAtual(),
                 "O saldo atual deveria ter sido recalculado com a diferença");
@@ -225,78 +270,15 @@ class ContaServiceTest {
     }
 
     /**
-     * Testa tentativa de atualizar conta de outro usuário.
-     */
-    @Test
-    @DisplayName("atualizar: Quando conta pertence a outro usuário, deve lançar EntityNotFoundException")
-    void testeAtualizar_QuandoOutroUsuario_DeveLancarExcecao() {
-        Usuario intruso = new Usuario("Intruso", "intruso@email.com", "123");
-        Pessoa pessoaIntrusa = new Pessoa("Pessoa Intrusa", intruso);
-        Conta contaIntrusa = new Conta("Conta Intrusa", INSTITUICAO, SALDO_INICIAL, pessoaIntrusa);
-        contaIntrusa.setId(UUID.randomUUID());
-
-        when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
-        when(contaRepository.findById(contaIntrusa.getId())).thenReturn(Optional.of(contaIntrusa));
-
-        UUID idContaIntrusa = contaIntrusa.getId();
-
-        assertThrows(EntityNotFoundException.class,
-                () -> contaService.atualizar(idContaIntrusa, criarAtualizarContaDTO));
-
-        verify(contaRepository, never()).saveAndFlush(any());
-    }
-
-    /**
-     * Testa o método {@link ContaService#excluir}.
-     */
-    @Test
-    @DisplayName("excluir: Quando válido, deve remover a conta")
-    void testeExcluir_QuandoValido_DeveDeletar() {
-        when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
-        when(contaRepository.findById(conta.getId())).thenReturn(Optional.of(conta));
-
-        contaService.excluir(conta.getId());
-
-        verify(contaRepository).delete(conta);
-    }
-
-    /**
-     * Testa o bloco catch(DataIntegrityViolationException) no método
-     * salvarEntidade.
-     * 
-     * <p>
-     * Simula uma "Race Condition": A validação em memória passa (lista vazia),
-     * mas o banco rejeita o insert por duplicidade no exato momento da gravação.
-     */
-    @Test
-    @DisplayName("cadastrar: Quando banco lança DataIntegrityViolation, deve converter para ViolacaoDadosException")
-    void testeCadastrar_QuandoErroBanco_DeveLancarExcecaoNegocio() {
-        when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
-        when(pessoaRepository.findById(pessoaTitular.getId())).thenReturn(Optional.of(pessoaTitular));
-
-        when(contaRepository.findByPessoa(pessoaTitular)).thenReturn(Collections.emptyList());
-
-        when(contaRepository.saveAndFlush(any(Conta.class)))
-                .thenThrow(new DataIntegrityViolationException("Duplicate entry"));
-
-        ViolacaoDadosException excecao = assertThrows(ViolacaoDadosException.class,
-                () -> contaService.cadastrar(criarAtualizarContaDTO));
-
-        assertTrue(excecao.getMessage().contains("Já existe uma conta"),
-                "A exceção do banco deve ser traduzida para uma mensagem amigável");
-    }
-
-    /**
-     * Testa o bloco IF de transferência de titularidade no método atualizar.
-     *
-     * <p>
-     * Cenário: O usuário decide mover a conta de "Titular" para "Outra Pessoa"
-     * (ambas dele).
-     * Deve validar a nova pessoa e atualizar a referência.
+     * Testa o bloco IF de transferência de titularidade no método
+     * {@link ContaService#atualizar(UUID, CriarAtualizarContaDTO)}.
      */
     @Test
     @DisplayName("atualizar: Quando troca de pessoa, deve validar nova pessoa e atualizar vínculo")
     void testeAtualizar_QuandoTrocaTitular_DeveAtualizarPessoa() {
+        UUID contaId = conta.getId();
+        UUID usuarioId = usuario.getId();
+
         Pessoa novaPessoa = new Pessoa("Novo Dono", usuario);
         novaPessoa.setId(UUID.randomUUID());
         novaPessoa.setTitular(true);
@@ -305,80 +287,147 @@ class ContaServiceTest {
                 novaPessoa.getId());
 
         when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
-        when(contaRepository.findById(conta.getId())).thenReturn(Optional.of(conta));
-        when(pessoaRepository.findById(novaPessoa.getId())).thenReturn(Optional.of(novaPessoa));
-        when(contaRepository.findByPessoa(novaPessoa)).thenReturn(Collections.emptyList());
+        when(contaRepository.findByPessoaUsuarioIdAndId(usuarioId, contaId)).thenReturn(Optional.of(conta));
+        when(pessoaService.obterEntidadeValidada(usuarioId, novaPessoa.getId())).thenReturn(novaPessoa);
+        when(contaRepository.findByPessoaUsuarioIdAndPessoaId(usuarioId, novaPessoa.getId()))
+                .thenReturn(Collections.emptyList());
         when(contaRepository.saveAndFlush(any(Conta.class))).thenReturn(conta);
 
-        ContaDTO resultado = contaService.atualizar(conta.getId(), dtoTransferencia);
+        ContaDTO resultado = contaService.atualizar(contaId, dtoTransferencia);
 
-        assertNotNull(resultado, "O resultado não deve ser nulo");
-        assertEquals(novaPessoa.getId(), resultado.pessoa().id(), "O DTO deve conter o ID da nova pessoa");
-        assertEquals("Novo Dono", resultado.pessoa().nome(), "O DTO deve conter o nome da nova pessoa");
-
-        verify(pessoaRepository).findById(novaPessoa.getId());
+        assertEquals(novaPessoa.getId(), resultado.pessoa().id());
+        verify(pessoaService).validarTitularidade(novaPessoa);
     }
 
     /**
-     * Testa o throw do método privado buscarPessoaDoUsuario via cadastrar.
-     * <p>
-     * Cenário: Tenta cadastrar conta para uma pessoa que não existe no banco
-     * ou pertence a outro usuário.
+     * Testa a ramificação do 'return null' dentro do catch durante a atualização.
      */
     @Test
-    @DisplayName("cadastrar: Quando pessoa não encontrada (buscarPessoaDoUsuario), deve lançar EntityNotFoundException")
-    void testeCadastrar_QuandoPessoaNaoExiste_DeveLancarExcecao() {
+    @DisplayName("atualizar: Quando banco lançar erro, testa o catch cobrindo o return null (Mock Estático)")
+    void testeAtualizar_ErroBanco_CobrindoReturnNull() {
+        UUID contaId = conta.getId();
+        UUID usuarioId = usuario.getId();
+
         when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
-        when(pessoaRepository.findById(pessoaTitular.getId())).thenReturn(Optional.empty());
+        when(contaRepository.findByPessoaUsuarioIdAndId(usuarioId, contaId)).thenReturn(Optional.of(conta));
+        when(contaRepository.findByPessoaUsuarioIdAndPessoaId(usuarioId, pessoaTitular.getId()))
+                .thenReturn(Collections.emptyList());
+
+        when(contaRepository.saveAndFlush(any(Conta.class)))
+                .thenThrow(new DataIntegrityViolationException("Erro constraint"));
+
+        try (MockedStatic<MetodosUteis> utilMock = mockStatic(MetodosUteis.class)) {
+            assertThrows(NullPointerException.class, () -> contaService.atualizar(contaId, criarAtualizarContaDTO));
+            utilMock.verify(() -> MetodosUteis.validarUnicidade(true, Conta.class.getSimpleName(), NOME_CONTA,
+                    pessoaTitular.getNome()));
+        }
+    }
+
+    /**
+     * Testa a exclusão favorável no método {@link ContaService#excluir(UUID)}.
+     */
+    @Test
+    @DisplayName("excluir: Quando não possuir vínculos, deve remover a conta")
+    void testeExcluir_QuandoValido_DeveDeletar() {
+        UUID contaId = conta.getId();
+        UUID usuarioId = usuario.getId();
+
+        when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
+        when(contaRepository.findByPessoaUsuarioIdAndId(usuarioId, contaId)).thenReturn(Optional.of(conta));
+        when(transacaoService.existeTransacaoVinculadaAConta(contaId)).thenReturn(false);
+
+        assertDoesNotThrow(() -> contaService.excluir(contaId));
+
+        verify(contaRepository).delete(conta);
+    }
+
+    /**
+     * Testa o bloqueio de exclusão em cascata no método
+     * {@link ContaService#excluir(UUID)}.
+     */
+    @Test
+    @DisplayName("excluir: Quando possuir Transações vinculadas, deve lançar ViolacaoDadosException")
+    void testeExcluir_QuandoPossuiTransacoes_DeveLancarExcecao() {
+        UUID contaId = conta.getId();
+        UUID usuarioId = usuario.getId();
+
+        when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
+        when(contaRepository.findByPessoaUsuarioIdAndId(usuarioId, contaId)).thenReturn(Optional.of(conta));
+        when(transacaoService.existeTransacaoVinculadaAConta(contaId)).thenReturn(true);
+
+        ViolacaoDadosException excecao = assertThrows(ViolacaoDadosException.class,
+                () -> contaService.excluir(contaId));
+
+        assertTrue(excecao.getMessage().contains("Transações"));
+        verify(contaRepository, never()).delete(any());
+    }
+
+    /**
+     * Testa o método de validação local
+     * {@link ContaService#obterEntidadeValidada(UUID, UUID)}.
+     */
+    @Test
+    @DisplayName("obterEntidadeValidada: Quando não encontrada, deve lançar EntityNotFoundException")
+    void testeObterEntidadeValidada_QuandoNaoEncontrada_DeveLancarExcecao() {
+        UUID contaId = conta.getId();
+        UUID usuarioId = usuario.getId();
+
+        when(contaRepository.findByPessoaUsuarioIdAndId(usuarioId, contaId)).thenReturn(Optional.empty());
 
         EntityNotFoundException excecao = assertThrows(EntityNotFoundException.class,
-                () -> contaService.cadastrar(criarAtualizarContaDTO));
+                () -> contaService.obterEntidadeValidada(usuarioId, contaId));
 
         assertTrue(excecao.getMessage().contains("não encontrada ou acesso negado"));
-
-        verify(contaRepository, never()).saveAndFlush(any());
     }
 
     /**
-     * Testa a ordenação composta da listagem de contas.
-     * Critério 1: Nome do Titular (Pessoa)
-     * Critério 2: Nome da Conta
+     * Testa o método interno para comunicação com PessoaService.
      */
     @Test
-    @DisplayName("listar: Deve ordenar por Nome do Titular e depois por Nome da Conta")
-    void testeListar_DeveRetornarOrdenadoPorTitularEConta() {
-        usuario = new Usuario("User", "user@email.com", "123");
-
-        Pessoa bruno = new Pessoa("Bruno", usuario);
-        bruno.setId(UUID.randomUUID());
-
-        Pessoa ana = new Pessoa("Ana", usuario);
-        ana.setId(UUID.randomUUID());
-
-        Conta contaBruno = new Conta("Conta Itaú", InstituicaoFinanceira.ITAU, BigDecimal.ZERO, bruno);
-
-        Conta contaAnaNubank = new Conta("Conta Nubank", InstituicaoFinanceira.NUBANK, BigDecimal.ZERO, ana);
-        Conta contaAnaInter = new Conta("Conta Inter", InstituicaoFinanceira.INTER, BigDecimal.ZERO, ana);
+    @DisplayName("existeContaVinculadaAPessoa: Deve retornar verdadeiro se o repositório acusar existência")
+    void testeExisteContaVinculadaAPessoa_DeveRetornarTrue() {
+        UUID pessoaId = pessoaTitular.getId();
+        UUID usuarioId = usuario.getId();
 
         when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
+        when(contaRepository.existsByPessoaUsuarioIdAndPessoaId(usuarioId, pessoaId)).thenReturn(true);
 
-        when(pessoaRepository.findByUsuario(usuario)).thenReturn(List.of(bruno, ana));
+        boolean resultado = contaService.existeContaVinculadaAPessoa(pessoaId);
 
-        when(contaRepository.findByPessoa(bruno)).thenReturn(List.of(contaBruno));
+        assertTrue(resultado);
+    }
 
-        when(contaRepository.findByPessoa(ana)).thenReturn(List.of(contaAnaNubank, contaAnaInter));
+    /**
+     * Testa a validação de unicidade na atualização no método
+     * {@link ContaService#atualizar(UUID, CriarAtualizarContaDTO)}.
+     *
+     * <p>
+     * Este teste cobre a ramificação de busca em memória onde um nome normalizado
+     * coincide com o de outra conta já cadastrada (IDs diferentes), disparando a
+     * validação
+     * antes mesmo da tentativa de persistência no banco de dados.
+     */
+    @Test
+    @DisplayName("atualizar: Quando nome pertence a outra conta na memória, deve lançar ViolacaoDadosException")
+    void testeAtualizar_QuandoNomeDuplicadoOutroId_DeveLancarExcecao() {
+        UUID contaId = conta.getId();
+        UUID usuarioId = usuario.getId();
 
-        List<ContaDTO> resultado = contaService.listar();
+        Conta outraConta = new Conta(NOME_CONTA_NOVO, INSTITUICAO, SALDO_INICIAL, pessoaTitular);
+        outraConta.setId(UUID.randomUUID());
 
-        assertEquals(3, resultado.size());
+        CriarAtualizarContaDTO dtoConflito = new CriarAtualizarContaDTO(NOME_CONTA_NOVO, INSTITUICAO, SALDO_INICIAL,
+                pessoaTitular.getId());
 
-        assertEquals("Ana", resultado.get(0).pessoa().nome());
-        assertEquals("Conta Inter", resultado.get(0).nome());
+        when(contextoUsuarioService.getUsuarioAutenticado()).thenReturn(usuario);
+        when(contaRepository.findByPessoaUsuarioIdAndId(usuarioId, contaId)).thenReturn(Optional.of(conta));
+        when(contaRepository.findByPessoaUsuarioIdAndPessoaId(usuarioId, pessoaTitular.getId()))
+                .thenReturn(List.of(outraConta));
 
-        assertEquals("Ana", resultado.get(1).pessoa().nome());
-        assertEquals("Conta Nubank", resultado.get(1).nome());
+        ViolacaoDadosException excecao = assertThrows(ViolacaoDadosException.class,
+                () -> contaService.atualizar(contaId, dtoConflito));
 
-        assertEquals("Bruno", resultado.get(2).pessoa().nome());
-        assertEquals("Conta Itaú", resultado.get(2).nome());
+        assertTrue(excecao.getMessage().contains(NOME_CONTA_NOVO));
+        verify(contaRepository, never()).saveAndFlush(any());
     }
 }
